# web-streaming

./: package-lock.json  package.json
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/: App.vue
client/src/router/: index.ts
client/src/utilities/: socketConnection.ts
client/src/utilities/RTCSession/: index.ts
client/src/utilities/canvas/: applyConvolutionMatrix.ts  convolutionMatrix.ts  drawVideoIntoCanvas.ts  index.ts  toBlackAndWhite.ts
client/src/views/: local.vue  stream.vue
server/: lambda.js
src/utilities/: socketConnection.ts
src/views/: local.vue  stream.vue
wasm/: Cargo.toml
wasm/pkg/: hello_wasm_bg.wasm  matrix_functions_wasm.d.ts  matrix_functions_wasm.js  matrix_functions_wasm_bg.js  matrix_functions_wasm_bg.wasm  matrix_functions_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
