[package]
name = "matrix-functions-wasm"
version = "0.1.0"
edition = "2021"
authors = ["David Liébana"]
description = "A simple package to apply convolution matrix over a canvas data pixeles"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = ["ImageData"] }

[profile.release]
opt-level = "s"